@@ -35,6 +35,7 @@
 * DecidirPlus: `name_override` option on `store` [naashton] #4338
 * Priority: Update `add_purchases_data` to return if `options[:purchases]` is empty [drkjc] #4349
 * Stripe PI: update `shipping` field to `shipping_address` [ajawadmirza] #4347
+* DecidirPlus: Handle `payment_method_id` by `card_brand` [naashton] #4350
 
 == Version 1.125.0 (January 20, 2022)
 * Wompi: support gateway [therufs] #4173
